--- a/matta.html
+++ b/matta.html
@@ -1,5 +1,5 @@
 <html>
- <head> <titel> ouhsfedoshafdo asoh d</titel></head>
+ <head> <title> ouhsfedoshafdo asoh d</title></head>
   <body>
     <h1>
       jsdjfisdf d dfsdf
