--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <htmt>
 <head>
-    <titel>
+    <title>
         MT Dhananjaya
-    </titel>
+    </title>
 </head>
 <body>
     <h1>Welcome to Github</h1>
